# RuFi-core

./: Cargo.toml
src/: context.rs  export.rs  lang.rs
src/lang/: builtins.rs  execution.rs
src/vm/: round_vm.rs  vm_status.rs
tests/: mod.rs
tests/by_equivalence/: mod.rs
tests/by_round/: mod.rs
tests/utils/: mod.rs
